--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_eclipse_tasks.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_eclipse_tasks.htm
@@ -28,7 +28,7 @@ IResource.refreshLocal()</b></a> method. Example:</p>
 <ul>
   <li> <b>resource</b> is a resource path relative to the workspace&nbsp;</li>
   <li> 
-<b>depth</b> can be one of the following: <b>zero</b>, <b> one</b> or <b>infinite</b>.</li>
+<b>depth</b> can be one of the following: <b>zero</b>, <b> one</b> or <b>infinite</b></li>
 </ul>
 <h3 >
 eclipse.incrementalBuild</h3>
