--- a/bundles/org.eclipse.platform.doc.isv/guide/arch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch.htm
@@ -41,7 +41,7 @@ Developer Environment (PDE) adds specialized tools that streamline the
 development of plug-ins and extensions.</p>
 
 
-<p>These tools not only serve a useful purpose, but provide a great example of
+<p>These tools not only serve a useful purpose, but also provide a great example of
 how new tools can be added to the platform by building plug-ins that extend the
 system.</p>
 
