--- a/bundles/org.eclipse.platform.doc.isv/guide/compare.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare.htm
@@ -22,9 +22,9 @@ plug-in supports the implementation of advanced compare views:</p>
 
 <ul>
   <li>Two and three-way compare and merge components for hierarchical structures
-    inferred from text</li>
+    inferred from text.</li>
   <li>Differencing engines for hierarchical structures and character ranges in
-    text</li>
+    text.</li>
 </ul>
 <p>These services are used in the platform to assist with user tasks such as
 integrating patch files and comparing/merging the workspace with local history.</p>
