--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
@@ -85,9 +85,9 @@ It can be used without modification as the input to the differencing engine.
 <h3>Compare functionality outside of compare editors</h3>
 
 
-<p>If you want to use compare functionality outside of the standard compare editor, 
-for example in a dialog or wizard, the compare plug-in provides additional helper
-classes:</p>
+<p>If you want to use compare functionality outside of the standard compare editor 
+(for example, in a dialog or wizard) the compare plug-in provides additional helper
+classes.</p>
 
 <p>
 
@@ -106,7 +106,7 @@ like <i>&quot;</i><b>Replace with Local History"</b> on workbench resources.
 <p>
 
 In addition it is possible to specify a subsection of the input element
-(e.g. a method in a Java source file) by means of a <b>path</b><i>.</i>. In this
+(e.g. a method in a Java source file) by means of a <b>path</b>. In this
 case the dialog compares only the subsection (as specified by the path)
 with the corresponding subsection in the list of editions. This functionality
 can be used to implement <i>&quot;</i><b>Replace with Element from Local History"</b> for 
@@ -123,7 +123,7 @@ interfaces.
 The
 <a href="../reference/api/org/eclipse/compare/HistoryItem.html"><b>HistoryItem</b></a>
 is a convenience class that implements these interfaces for
-<a href="../reference/api/org/eclipse/core/resources/IFileState.html"><b>IFileState</b></a>objects.
+<a href="../reference/api/org/eclipse/core/resources/IFileState.html"><b>IFileState</b></a> objects.
 <p>
 &nbsp;
 
