--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
@@ -116,19 +116,19 @@ The typical steps to compare hierarchically structured data and to display
 the differences are as follows:
 <ol>
 <li>
-map the input data into a tree of objects implementing both the
+Map the input data into a tree of objects implementing both the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
- interfaces</li>
+ interfaces.</li>
 
 <li>
-perform the compare operation by means of the
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a></li>
+Perform the compare operation by means of the
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a>.</li>
 
 <li>
-feed the differencing result into the
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a></li>
+Feed the differencing result into the
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a>.</li>
 
 </ol>
 
