--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_debug.htm
@@ -11,10 +11,10 @@
 <BODY BGCOLOR="#ffffff">
 <h2>Debugging a program</h2>
 <p>When you define a <a href="debug_launch.htm">launch configuration</a> for
-running a program, you can specify which modes (run, debug) your program
+running a program, you can specify which modes (run and/or debug) your program
 supports.&nbsp; If you support debug mode, then you need to implement a debug
 model and UI that allow users to interact with your programs under debug.&nbsp;
-The core platform debug plug-in provides support for&nbsp;</p>
+The core platform debug plug-in provides support for:</p>
 <ul>
   <li> a generic debug model</li>
   <li>debug
