--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_adding.htm
@@ -14,7 +14,7 @@
 extension point.&nbsp; This extension point allows you to declare a
 configuration type using a unique id.&nbsp; You must provide a corresponding
 implementation of <a href="../reference/api/org/eclipse/debug/core/model/ILaunchConfigurationDelegate.html"><b>ILaunchConfigurationDelegate</b></a>
-in your plug-in.&nbsp; You can also specify which modes (run, debug) are
+in your plug-in.&nbsp; You can also specify which modes (run and/or debug) are
 supported by your launcher and a name that should be used when showing launchers
 of this type to the user.</p>
 <p>The following markup shows how the Java tools declare a Java launch
