--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
@@ -120,15 +120,15 @@ Map the input data into a tree of objects implementing both the
 <a href="../reference/api/org/eclipse/compare/structuremergeviewer/IStructureComparator.html"><b>IStructureComparator</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
- interfaces.</li>
+ interfaces</li>
 
 <li>
 Perform the compare operation by means of the
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a>.</li>
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/Differencer.html"><b>Differencer</b></a></li>
 
 <li>
 Feed the differencing result into the
-<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a>.</li>
+<a href="../reference/api/org/eclipse/compare/structuremergeviewer/DiffTreeViewer.html"><b>DiffTreeViewer</b></a></li>
 
 </ol>
 
