Linked resource image

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -118,6 +118,7 @@ Eclipse since 2.0:</p>
       on the New Folder and New File wizards. These <a href="../concepts/concepts-13.htm">linked
       resources</a> are useful for integrating with external libraries or source
       code directories that cannot readily be copied into an Eclipse workspace.
+      <p align="center"><img border="0" src="images/linked-resource.gif" width="438" height="637" alt="Linked resource"></td>
   </tr>
 </table>
 
