Add item for 35769

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -1181,6 +1181,27 @@ line comment</h4>
 <p>If the last line of the catch block code generation template is a line comment then the line
 must be terminated with a newline. Otherwise the closing curly bracket ends up on the comment
 line, resulting in a compilation error. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35746">35746</a>)</p>
+<h4>Problem opening class file editor</h4>
+<p>If the &quot;Use classpath containers" preference has been enabled on the <b>Plug-in
+Development &gt; Java Build Path Control</b> preference page, you may not be
+able to open a class file editor for a class file contained in a JAR in the "Required plug-in entries" container.
+One way to work around the problem is to expand the class file in the Packages
+Explorer; this displays the class file's structure just as the editor would. If
+a source code zip is available for the JAR, another option is to attach source to the JAR file.</p>
+<p>To attach source to a JAR in the &quot;Required plug-in entries&quot;
+container, follow these steps:</p>
+<ol>
+  <li>In the Package Explorer, select the project and open <b>Project &gt;
+    Properties</b> from the context menu</li>
+  <li>Select the <b>Java Build Path</b> page</li>
+  <li>Flip to the <b> Libraries</b> page</li>
+  <li>Expand the "Required plug-in entries" item</li>
+  <li>Expand the item for the JAR</li>
+  <li>Select &quot;Source Attachment&quot; and press <b>Edit</b></li>
+  <li>Enter the location of the corresponding source zip</li>
+  <li>OK to acknowledge</li>
+</ol>
+<p>(bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35769">35769</a>)</p>
 <h3>3.3 <a name="I-Plug-in Development Environment (PDE)">Plug-in Development
 Environment (PDE)</a></h3>
 <h4>PDE source page colors do not take effect on Apply</h4>
@@ -1455,7 +1476,7 @@ U.S. and other countries.</p>
 Software Systems Ltd.</p>
 <p>Other company, product, and service names may be trademarks or service marks
 of others.</p>
-<p>(c) Copyright 2003 IBM Corp. and others 2003</p>
+<p>(c) Copyright IBM Corp. and others 2003</p>
 
 </body>
 
