--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -93,7 +93,7 @@ To make things easier, all key customization is done on the Keys preference page
 <p>
 Select <b>Window &gt; Preferences &gt; Workbench &gt; Keys</b> for the Keys preference page.
 </p>
-<p> <img src="../../images/keys1.gif" alt="Keys preference page, showing Emacs as the active configuration, and the Close command selected" width="591" height="543"> 
+<p> <img src="../../images/keys1.gif" alt="Keys preference page showing Emacs as the active configuration and the Close command selected" width="591" height="543"> 
 </p>
 In this example, we have chosen to select <em>Emacs</em> as the active configuration, and have selected the command <code>Close</code> from the list of commands. Information on this command, along with its current key bindings, is shown on the right side.
 </p>
@@ -115,7 +115,7 @@ binding, effectively removes the previous assignment of <code>Ctrl+W</code> to
 <code>Cut</code>. We can remove this change at any time by selecting our new key 
 binding and clicking the 'Remove' button. The previous assignment of <code>Ctrl+W</code> 
 to <code>Cut</code> will automatically be restored. 
-<p> <img src="../../images/keys3.gif" alt="Keys preference page, showing the new assignment, including 'change' graphic" width="472" height="428"> 
+<p> <img src="../../images/keys3.gif" alt="Keys preference page showing the new assignment, including 'change' graphic" width="472" height="428"> 
 </p>
 By selecting the command <code>Cut</code>, we can see the results of our change. Notice the small 'minus' graphic <img src="../../images/minus.gif" alt="Small graphic representing 'minus'"> indicating that the key binding was removed. We can restore this key binding at any time by selecting it here and clicking the 'Restore' button, effectively removing the new key binding we added in the previous step.
 <p> <img src="../../images/keys4.gif" alt="Keys preference page showing the Cut command" width="604" height="517"> 
@@ -141,7 +141,7 @@ This is a conflict. It wouldn't be proper to invoke both commands, nor would it 
 <p>
 Conflicts of this nature are shown in the Keys preference page as follows. Notice the red text and the word "[conflict]":
 </p>
-<p> <img src="../../images/keys6.gif" alt="Keys preference page, showing a conflict for the key sequence Ctrl+F4" width="567" height="451"> 
+<p> <img src="../../images/keys6.gif" alt="Keys preference page showing a conflict for the key sequence Ctrl+F4" width="567" height="451"> 
 </p>
 <p>
 These types of conflicts can be resolved by the user explicitly assigning the key sequence to one of the commands.
