--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -76,7 +76,7 @@ Eclipse since 2.0:</p>
       from a file selected in one view to the same file in a different view
       (e.g., from the resource Navigator view to the Package Explorer
       view).
-      <p align="center"><img border="0" src="images/show-in.gif" width="437" height="280" alt="Navigate > Show In menu"></p>
+      <p align="center"><img border="0" src="images/show-in.gif" width="437" height="280" alt="Navigate &gt; Show In menu"></p>
     </td>
   </tr>
   <tr>
