Fix spelling of JDT and remove <hr>

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -14,13 +14,13 @@
 
 <h2>What's New in 2.1</h2>
 <p>Here are some of the more interesting or significant changes made to the Java 
-  Development Tooling for the 2.1 release of Eclipse since 2.0:</p>
+  development tools for the 2.1 release of Eclipse since 2.0:</p>
 <p><a href="#editor">Java Editor</a></p>
 <p><a href="#debug">Java Debugger</a></p>
 <p><a href="#refactor">Refactoring</a></p>
 <p><a href="#others">General</a></p>
 <p><a href="#Junit">JUnit integration</a></p>
-<h2></h2>
+
 <h2>Java Editor<a name="editor"></a></h2>
 
 <table border="1" cellpadding="10" cellspacing="0" width="600">
@@ -301,7 +301,7 @@
 	 </td>
   </tr>
 </table>
-<hr>
+
 <h2>Refactoring<a name="refactor"></a></h2>
 <table border="1" cellpadding="10" cellspacing="0" width="600">
   <colgroup>
@@ -552,8 +552,8 @@
       a history entry from the right hand side. 
       <P align=center><img src="images/multiple-restore.gif" width=345 height=229 alt="Multi-method restore" border=0>
 </P></TD></TR>
-
 </table>
+
 <h2>JUnit integration<a name="Junit"></a></h2>
 <table border="1" cellpadding="10" cellspacing="0" width="600">
   <colgroup>
