Fixed missing shot

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -46,7 +46,10 @@ view.&nbsp;</p>
     The Search view now shows only one match for JanesText.txt 
     <blockquote><img src="../images/Image51_search_reduced.gif" alt="Search view" border="0" width="253" height="154"></blockquote>
   </li>
-	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img src="../../../../../0317/eclipse/workspace/org.eclipse.platform.doc.user/images/Image50_search.gif" alt="Search button" border="0" width="26" height="22"> in the Workbench's toolbar.</li>
+	
+  <li>Perform a second search for &quot;that&quot; by clicking on the Search button 
+    <img src="../images/Image50_search.gif" alt="Search button" border="0" width="26" height="22"> 
+    in the Workbench's toolbar.</li>
 	<li>The Search view updates to show the results of the new search.
 		<br>
     You can move back and forth between your two search results using the drop 
