--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -299,7 +299,7 @@
 			<td width="20%" valign="top" align="right"><b>Structured selections</b></td>
 			<td width="80%" valign="top">You can quickly select Java code syntactically
 			using the Structured Selection feature.<br>
-      Highlight the text and press <b>Ctrl+Shift+Arrow Up</b> or select <b>Edit 
+      Highlight the text and press <b>Alt+Shift+Arrow Up</b> or select <b>Edit 
       &gt; Expands Selection To &gt; Enclosing Element</b> from the menu bar - 
       the selection will be expanded to the smallest Java-syntax element that 
       contains the selection. You can then further expand the selection by invoking 
