Bug 20169 - Help context ids for External tools

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -45,6 +45,7 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 <a href="../reference/ref-anteditorprefs.htm">Ant editor preferences</a><br>
 <a href="../reference/ref-antruntimeprefs.htm">Ant runtime preferences</a><br>
 <a href="../reference/ref-antview.htm">Ant view</a><br>
+<a href="../reference/ref-anteditor.htm">Ant editor</a><br>
 <a href="../reference/ref-anticons.htm">External Tools and Ant icons</a>
 </p>
 <p>
