--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-version.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-version.htm
@@ -12,19 +12,25 @@
 <H1>Using a different version of Ant</H1>
 
 <P> The Eclipse platform provides Ant 1.5.2 as a plug-in library. When running 
-an Ant script in the Workbench, version 1.5.2 is used by default. It is possible 
+an Ant buildfile in the Workbench, version 1.5.2 is used by default. It is possible 
 to use different versions, although they are not supported. There are at least 
 two ways of using a different version of Ant:
 </P>
 
 <dl>
 <dt><b>Changing the Ant classpath:</b></dt>
-<dd>When Ant runs a script, it looks for the necessary classes on the Ant classpath. 
+<dd>When Ant runs a buildfile, it looks for the necessary classes on the Ant classpath. 
 The Ant classpath consists of the plug-ins contributing new tasks, types or 
 libraries, plus the classpath defined in the external tools preferences. To 
 access the preferences, click <b>Window > Preferences > Ant > Runtime</b>. 
 The two JARs related to Ant 1.5.2 are <code>ant.jar</code> and <code>optional.jar</code>. 
 Remove these JARs and add the ones from the desired Ant version. 
+<p>Note that explicitly adding the Xerces
+JARs to the runtime Ant classpath is no longer required and will cause problems. The Xerces
+classes are loaded from the org.apache.xerces plug-in provided with Eclipse. For most Ant
+distributions, the Xerces JARs cannot even be in the same physical location as the ant.jar
+and optional.jar. This results from the Ant JARs containing manifest files which contain
+classpath entries pointing to the Xerces JARs.
 
 <p>After you change the Ant classpath, all future Ant builds will use the updated 
 version instead of the default. To restore the Ant classpath to its original 
