StyledText font style support

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_custom.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_custom.htm
@@ -139,7 +139,7 @@ StyledText</a></strong></P>
 </TD>
 <TD width="226">
 <P CLASS="CellBody">
-Editable control that allows the user to type text. Ranges of text inside the control can have distinct fonts and colors (foreground and background.)</P>
+Editable control that allows the user to type text. Ranges of text inside the control can have distinct colors (foreground and background) and font styles (bold and regular).</P>
 </TD>
 <TD width="183">
 <P CLASS="CellBody">
