--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -47,7 +47,7 @@ plug-ins.&nbsp;&nbsp; Then we can refer to the <b>org.eclipse.help</b> plug-in. 
 
 
 <ul>
-  <li> the if of the plug-in that
+  <li> the ID of the plug-in that
 contains the action</li>
   <li>the name of the class that implements the action</li>
   <li>the String that will be passed to the live help action using <b>setInitializationString</b>.&nbsp;
