--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -98,8 +98,7 @@ In order to use the Eclipse compiler, you simply need to define the <b>build.com
 </pre>
 </font> The syntax used for the javac Ant task can be found in the <a href="http://jakarta.apache.org/ant/manual/CoreTasks/javac.html">
  Ant javac task documentation</a>
- . The current adapter supports the Javac Ant task 1.4.1. A 1.5 version will 
-be available when Ant 1.5 is released.  
+ . The current adapter supports the Javac Ant task 1.4.1 and 1.5.3 versions.  
 <h3> Problem determination</h3>
 <p> JDT Core defines a specialized marker (marker type "<b>org.eclipse.jdt.core.problem</b>
   ") to denote compilation problems. To programmatically discover problems
