added instructions for running tests with properties file

--- a/bundles/org.eclipse.test/readme.html
+++ b/bundles/org.eclipse.test/readme.html
@@ -93,6 +93,13 @@ test target. On *nix systems, the os, ws and arch parameters must be specified.
     <td>Run tests without installing a clean Eclipse between test targets. Default 
       is to install a clean Eclipse between test targets.</td>
   </tr>
+  <tr>
+    <td>-properties</td>
+    <td>Used to reference a properties file containing additional Ant properties 
+      used in running tests.Can be used to pass additional vm arguments to the 
+      Java virtual machine running the tests by adding the entry &quot;extraVMargs=&lt;the 
+      args to pass to the vm&gt;&quot; to the specified properties file.</td>
+  </tr>
 </table>
   
 <p><font size="+1">Test Targets</font></p>
