--- a/bundles/org.eclipse.test/readme.html
+++ b/bundles/org.eclipse.test/readme.html
@@ -38,8 +38,9 @@
   to clean up the repository between each Team test run you will probably want 
   to clean it up periodically.</p>
 <p><font size="+1">Setup</font></p>
-<p>1. Extract the eclipse-Automated-Tests-&lt;buildid&gt;.zip. This will create 
-  a top-level directory &quot;<b>eclipse-testing</b>&quot;.<br>
+<p>1. Extract the eclipse-Automated-Tests-&lt;buildid&gt;.zip. On Window, extract 
+  this file close to the root of the drive to prevent some path names from exceeding 
+  the 233 character limit. This will create a top-level directory &quot;<b>eclipse-testing</b>&quot;.<br>
   2. Place the Eclipse SDK zip file to test in the eclipse-testing directory. 
   Do not unzip this file. (The test scripts will take care of this)<br>
   3. To run the Team CVS tests edit the test.xml script to provide connection 
@@ -63,7 +64,7 @@
 <p>1. cd to the eclipse-testing directory<br>
   2. Run the following script:</p>
 <p><b>runtests [-os &lt;operating system&gt;] [-ws &lt;windowing system&gt;] [-arch 
-  &lt;architecture&gt;] [-noclean] [&lt;testTarget&gt;]</b></p>
+  &lt;architecture&gt;] [-noclean] [&lt;testTarget&gt;][-properties &lt;path&gt;]</b></p>
 All parameters and targets are optional on windows systems. Just running &quot;runtests&quot; 
 will run <b>ALL</b> tests on Windows, installing a clean Eclipse between each 
 test target. On *nix systems, the os, ws and arch parameters must be specified. 
