add instructions for running with specific vm

--- a/bundles/org.eclipse.test/readme.html
+++ b/bundles/org.eclipse.test/readme.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Untitled Document</title>
+<title>Instructions</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
@@ -24,7 +24,8 @@
 
 <p><font size="+1">Requirements</font></p>
 <p>1. All test machines will require a java runtime environment (version 1.3 or 
-  higher) installed and added to the path environment variable.<br>
+  higher) installed and optionally added to the path environment variable (see 
+  <a href="#vm">-vm</a> parameter below).<br>
   2. <a href="http://www.info-zip.org/pub/infozip/UnZip.html">Info-ZIP UnZip</a> 
   version 5.41 or later installed and added to the path.<br>
   3. The Automated Test feature from an Eclipse build (<a href="http://www.eclipse.org/downloads/index.php">http://www.eclipse.org/downloads/index.php</a>). 
@@ -64,11 +65,12 @@
 <p>1. cd to the eclipse-testing directory<br>
   2. Run the following script:</p>
 <p><b>runtests [-os &lt;operating system&gt;] [-ws &lt;windowing system&gt;] [-arch 
-  &lt;architecture&gt;] [-noclean] [&lt;testTarget&gt;][-properties &lt;path&gt;]</b></p>
+  &lt;architecture&gt;] [-noclean] [&lt;testTarget&gt;][-properties &lt;path&gt;][-vm 
+  &lt;path to java executable&gt;]</b></p>
 All parameters and targets are optional on windows systems. Just running &quot;runtests&quot; 
 will run <b>ALL</b> tests on Windows, installing a clean Eclipse between each 
 test target. On *nix systems, the os, ws and arch parameters must be specified. 
-<p><font size="+1">Parameters</font></p>
+<p><font size="+1"><a name="vm"></a>Parameters</font></p>
 <table width="90%" border="1">
   <tr> 
     <td>Parameter</td>
@@ -94,12 +96,19 @@ test target. On *nix systems, the os, ws and arch parameters must be specified.
     <td>Run tests without installing a clean Eclipse between test targets. Default 
       is to install a clean Eclipse between test targets.</td>
   </tr>
-  <tr>
+  <tr> 
     <td>-properties</td>
     <td>Used to reference a properties file containing additional Ant properties 
       used in running tests.Can be used to pass additional vm arguments to the 
       Java virtual machine running the tests by adding the entry &quot;extraVMargs=&lt;the 
       args to pass to the vm&gt;&quot; to the specified properties file.</td>
+  </tr>
+  <tr>
+    <td>-vm</td>
+    <td>The full path to the java executable with which to run the tests. Use 
+      this to specify a specific virtual machine with which to run the tests. 
+      For example, &quot;-vm c:\sun131\jre\bin\java&quot;. Default set to &quot;java&quot; 
+      (i.e. java executable on system path). </td>
   </tr>
 </table>
   
