*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-version.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-version.htm
@@ -18,10 +18,10 @@ two ways of using a different version of Ant:
 </P>
 
 <dl>
-<dt><b>Changing the Ant classpath:</b></dt>
+<dt><b>Changing the Ant runtime classpath:</b></dt>
 <dd>When Ant runs a buildfile, it looks for the necessary classes on the Ant classpath. 
 The Ant classpath consists of the plug-ins contributing new tasks, types or 
-libraries, plus the classpath defined in the external tools preferences. To 
+libraries, plus the classpath defined in the Ant runtime classpath preferences. To 
 access the preferences, click <b>Window > Preferences > Ant > Runtime</b>. 
 The two JARs related to Ant 1.5.2 are <code>ant.jar</code> and <code>optional.jar</code>. 
 Remove these JARs and add the ones from the desired Ant version. 
@@ -34,13 +34,13 @@ classpath entries pointing to the Xerces JARs.
 
 <p>After you change the Ant classpath, all future Ant builds will use the updated 
 version instead of the default. To restore the Ant classpath to its original 
-state, <b>Restore Defaults</b> button on the properties page.
+state, <b>Restore Defaults</b> button on the preference page.
 </p>
 </dd>
 <dt><b>Using Ant as an external tool:</b></dt>
 <dd>When changing the Ant classpath is not an option, or if you just want to test 
 a newer version or beta version of Ant, using it as an external tool can be 
-a better solution. Usually when it is running in the Workbench, the Ant script 
+a better solution. Usually when it is running in the Workbench, the Ant buildfile 
 itself is considered to be a external tool, but this is not the only way. 
 To install a binary distribution of Ant as an external tool (<b>Note:</b> 
 These steps are for Windows, but similar methods can be used for other operating systems): 
@@ -55,7 +55,7 @@ These steps are for Windows, but similar methods can be used for other operating
   <li>Find and select a file called <code>ant.bat</code> (it should be 
   in the <code>bin</code> folder of your Ant installation).</li>
   <li>In the <b>Arguments</b> field enter the arguments for your 
-    script that would normally enter for running the script outside of the 
+    buildfile that would normally enter for running the buildfile outside of the 
     Workbench.</li>
   <li>In the <b>Working Directory</b> field enter the directory of your buildfile.</li>
   <li>Click <b>Run</b> to execute the buildfile.</li>
@@ -63,7 +63,7 @@ These steps are for Windows, but similar methods can be used for other operating
 
 <p>When you run Ant as an external tool, none of the tasks or types 
 contributed by Eclipse will work. Also, the Ant classpath preference has no 
-effect in the script execution.
+effect in the buildfile execution.
 </p>
 </dd>
 </dl>
