--- a/oldfeatures/org.eclipse.platform-feature/rootfiles/readme/readme_eclipse.html
+++ b/oldfeatures/org.eclipse.platform-feature/rootfiles/readme/readme_eclipse.html
@@ -12,7 +12,7 @@
 
 <h1>Eclipse Project Release Notes</h1>
 <p>Draft Pre-release 3.0<br>
-Last revisd May 22, 2003</p>
+Last revised May 22, 2003</p>
 <p><i><font size="5"><b>[These release notes have yet to be updated for the 3.0
 development stream.<br>
 What follows are the 2.1.0 release notes.]</b></font></i></p>
