--- a/oldfeatures/org.eclipse.platform-feature/rootfiles/readme/eclipse_3_0_porting_guide.html
+++ b/oldfeatures/org.eclipse.platform-feature/rootfiles/readme/eclipse_3_0_porting_guide.html
@@ -11,8 +11,8 @@
 <body>
 
 <h1>Eclipse 3.0 Porting Guide</h1>
-<p>Draft for 3.0 M1<br>
-Last revised June 17, 2003</p>
+<p>Draft for 3.0 M3<br>
+Last revised August 25, 2003</p>
 <p>Eclipse 3.0 is not fully compatible with 2.0 and 2.1. The decision to break
 compatibility was taken to give us additional freedom to innovate and make
 Eclipse 3.0 significantly better than it could have been had we tried to
@@ -26,7 +26,7 @@ plug-ins to 3.0.</p>
 Porting Guide is being included with each milestone build to facilitate climbing
 aboard the 3.0 release wagon at an early stage, or to estimate the amount of
 effort that will be involved in eventually porting existing plug-ins to 3.0. The
-Eclipse APIs will be in their finished form by milestone M5 (see <a href="http://www.eclipse.org/eclipse/development/eclipse_project_plan_3_0.html">Eclipse
+Eclipse APIs will be stable by milestone M5 (see <a href="http://www.eclipse.org/eclipse/development/eclipse_project_plan_3_0.html">Eclipse
 3.0 plan</a> for exact dates).</i></p>
 <h2>General Information on Compatibility</h2>
 <p><b>API Contract Compatibility:</b> Eclipse SDK 3.0 is upwards
@@ -65,9 +65,9 @@ versions; 3.0 plug-in developers are responsible for ensuring that their
 plug-ins recognize 3.0, 2.1, and 2.0 metadata and process it appropriately. User
 interface session state may be discarded when a workspace is upgraded. Downward
 workspace compatibility is not supported. A workspace created (or opened) by
-Eclipse SDK 3.0 will be unusable with an earlier version of Eclipse SDK.&nbsp;Visible
-metadata files created (or overwritten) by Eclipse SDK 3.0 will generally be
-unusable with earlier versions of Eclipse SDK.
+Eclipse SDK 3.0 will be unusable with an earlier version of Eclipse
+SDK.&nbsp;Visible metadata files created (or overwritten) by Eclipse SDK 3.0
+will generally be unusable with earlier versions of Eclipse SDK.
 <p><b>Non-compliant usage of API's</b>: All non-API methods and classes, and
 certainly everything in a package with &quot;internal&quot; in its name, are
 considered implementation details which may vary between operating environment
