Added enclosing project scope (patch by Thomas Mäder)

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -100,6 +100,8 @@
 
     <p><span class="control">Workspace</span> - all projects and files in the workspace are included in this search</p>
 
+    <p><span class="control">Enclosing Projects</span> - the projects enclosing the currently selected elements</p>
+
     <p><span class="control">Hierarchy</span> - only the type hierarchy of the selected element is included in this search</p>
 
     <p><span class="control">Working Set</span> - only resources that belong to the chosen working set are included in this search</p>
