Bug 42737 - Subtarget -> internal target

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
@@ -16,7 +16,7 @@
   buildfile has a number of targets.<br>
   <img src="../images/Image608_buildxml_outline.gif" alt="Outline view of default build.xml file" border="0" width="217" height="405"> 
 </P>
-<P CLASS="Para">Solid green arrows denote targets, while subtargets are represented 
+<P CLASS="Para">Solid green arrows denote targets, while internal targets are represented 
   by hollow green arrows. The following are the useful top-level targets:</P>
 <ul>
   <li><b>build.update.jar</b> This target builds jars for the plug-in, then zips 
