Bug 42494 - Debug help context ids

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -33,7 +33,7 @@
      <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
      <a href="../tasks/tasks-64.htm">Restoring a deleted workbench element</a><br>
      <a href="../tasks/tasks-2.htm">Showing and hiding files</a><br>
-     <a href="../tasks/tasks-119.htm">Working with JREs</a></p>
+     <a href="../tasks/tasks-JREs.htm">Working with JREs</a></p>
 
     <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
      <a href="../reference/ref-2.htm">JDT actions</a><br>
