--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -55,7 +55,7 @@
      <a href="../concepts/concepts-5.htm">Java perspectives</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
-     <a href="../tasks/tasks-10.htm">Changing the appearance of the Console view</a><br>
+     <a href="../tasks/tasks-consoleAppearance.htm">Changing the appearance of the Console view</a><br>
      <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a></p>
 
     <p><img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
