--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -113,7 +113,7 @@
     </p>
     <p>
       <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
-       <a href="../tasks/tasks-119.htm">Working with JREs</a><br>
+       <a href="../tasks/tasks-JREs.htm">Working with JREs</a><br>
     </p>
     <p>
       <img src="../images/ngrelr.gif" width=159 height=27 alt="Related reference">
