--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
@@ -54,7 +54,7 @@
       <a href="../tasks/tasks-108.htm">Building automatically</a><br>
        <a href="../tasks/tasks-109.htm">Building manually</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
-       <a href="../tasks/tasks-129.htm">Setting execution arguments</a>
+       <a href="../tasks/tasks-executionArgs.htm">Setting execution arguments</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
