--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
@@ -66,7 +66,7 @@
        <a href="tasks-114.htm">Adding a variable class path entry</a><br>
        <a href="tasks-106.htm">Building a Java program</a><br>
        <a href="tasks-110.htm">Working with build paths</a><br>
-       <a href="tasks-119.htm">Working with JREs</a>
+       <a href="tasks-JREs.htm">Working with JREs</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
