--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
@@ -53,7 +53,7 @@
       <a href="tasks-121.htm">Adding a new JRE definition</a><br>
        <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
        <a href="tasks-110.htm">Working with build paths</a><br>
-       <a href="tasks-119.htm">Working with JREs</a>
+       <a href="tasks-JREs.htm">Working with JREs</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
