--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-121.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-121.htm
@@ -54,7 +54,7 @@
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-119.htm">Working with JREs</a><br>
+      <a href="tasks-JREs.htm">Working with JREs</a><br>
        <a href="tasks-120.htm">Assigning the default JRE for the workbench</a><br>
        <a href="tasks-123.htm">Editing a JRE definition</a><br>
        <a href="tasks-122.htm">Overriding the default system libraries for a JRE definition</a>
