--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-123.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-123.htm
@@ -54,9 +54,9 @@
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
       <a href="tasks-121.htm">Adding a new JRE definition</a><br>
-       <a href="tasks-125.htm">Deleting a JRE definition</a><br>
+       <a href="tasks-deleteJRE.htm">Deleting a JRE definition</a><br>
        <a href="tasks-122.htm">Overriding the default system libraries for a JRE definition</a><br>
-       <a href="tasks-119.htm">Working with JREs</a>
+       <a href="tasks-JREs.htm">Working with JREs</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
