--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
@@ -41,7 +41,7 @@
        <a href="../tasks/tasks-131.htm">Re-launching a program</a><br>
        <a href="../concepts/cremdbug.htm">Remote debugging</a><br>
        <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
-       <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
+       <a href="../tasks/tasks-executionArgs.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
        <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
        <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a>
