--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
@@ -39,7 +39,7 @@
        <a href="tasks-19.htm">Creating a nested class</a><br>
        <a href="tasks-94.htm">Renaming a class, field, or interface</a><br>
        <a href="tasks-92.htm">Renaming a compilation unit</a><br>
-       <a href="tasks-129.htm">Setting execution arguments</a>
+       <a href="tasks-executionArgs.htm">Setting execution arguments</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
