--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -44,7 +44,7 @@
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
-      <a href="tasks-129.htm">Setting execution arguments</a><br>
+      <a href="tasks-executionArgs.htm">Setting execution arguments</a><br>
        <a href="tasks-92.htm">Renaming a compilation unit</a><br>
        <a href="tasks-75.htm">Opening a type in the Package Explorer</a><br>
        <a href="tasks-60.htm">Organizing existing import statements</a>
