--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-deleteJRE.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-deleteJRE.htm
@@ -37,7 +37,7 @@
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
-      <a href="tasks-119.htm">Working with JREs</a><br>
+      <a href="tasks-JREs.htm">Working with JREs</a><br>
        <a href="tasks-121.htm">Adding a new JRE definition</a><br>
        <a href="tasks-123.htm">Editing a JRE definition</a>
     </p>
