--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
@@ -76,7 +76,7 @@
     <p>
       <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
       <a href="tasks-130.htm">Launching a Java program</a><br>
-      <a href="tasks-129.htm">Setting execution arguments<br>
+      <a href="tasks-executionArgs.htm">Setting execution arguments<br>
       </a><a href="../tasks/tasks-9.htm">Changing debugger launch options</a>
     </p>
     <p>
