--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
@@ -38,7 +38,7 @@
       <a href="tasks-120.htm">Assigning the default JRE for the workbench</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
        <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
-       <a href="../tasks/tasks-119.htm">Working with JREs</a>
+       <a href="../tasks/tasks-JREs.htm">Working with JREs</a>
     </p>
     <p>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height=
