--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
@@ -109,7 +109,7 @@
        <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
        <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
-       <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
+       <a href="../tasks/tasks-executionArgs.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
     </p>
     <p>
