--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
@@ -68,7 +68,7 @@
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
        <a href="../tasks/tasks-142.htm">Disconnecting from a VM</a><br>
-       <a href="../tasks/tasks-129.htm">Setting execution arguments</a>
+       <a href="../tasks/tasks-executionArgs.htm">Setting execution arguments</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
