--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
@@ -76,7 +76,7 @@
        <a href="tasks-18.htm">Creating a top-level class</a><br>
        <a href="tasks-19.htm">Creating a nested class</a><br>
        <a href="tasks-20.htm">Creating a class in an existing compilation unit</a><br>
-       <a href="tasks-129.htm">Setting execution arguments</a>
+       <a href="tasks-executionArgs.htm">Setting execution arguments</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
