--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -57,7 +57,7 @@
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
       <br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
-       <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
+       <a href="../tasks/tasks-executionArgs.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>    </p>
     <p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
