--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-JREs.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-JREs.htm
@@ -51,7 +51,7 @@
       <a href="tasks-121.htm">Adding a new JRE definition</a><br>
        <a href="tasks-120.htm">Assigning the default JRE for the workbench</a><br>
        <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
-       <a href="tasks-125.htm">Deleting a JRE definition</a><br>
+       <a href="tasks-deleteJRE.htm">Deleting a JRE definition</a><br>
        <a href="tasks-123.htm">Editing a JRE definition</a><br>
        <a href="tasks-122.htm">Overriding the default system libraries for a JRE definition</a><br>
        <a href="tasks-111.htm">Viewing and editing a project's build path</a>
