--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -38,7 +38,8 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 <a href="../tasks/tasks-ant-running.htm">Running Ant buildfiles</a><br>
 <a href="../tasks/tasks-ant-classpath.htm">Modifying the Ant classpath</a><br>
 <a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new Ant tasks and types</a><br>
-<a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a>
+<a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a><br>
+<a href="../tasks/antRunner.htm">antRunner application entry point</a>
 </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="../reference/ref-antprefs.htm">Ant preferences</a><br>
