Bug 41498 - Update doc for Ant properties extension point

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant.htm
@@ -14,9 +14,10 @@ Platform Ant support
 <h1>Platform Ant support</h1>
 <p>Ant is a Java-based build tool that uses XML-based configuration files to
 describe build tasks.&nbsp; The Eclipse platform allows you to run Ant buildfiles
-from your plug-in and contribute new Ant <a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">tasks</a> 
-and <a href="../reference/extension-points/org_eclipse_ant_core_antTypes.html">
-types</a> using extension points.&nbsp; The rest of this discussion assumes that you have a basic
+from your plug-in and contribute new Ant <a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">tasks</a>, 
+<a href="../reference/extension-points/org_eclipse_ant_core_antTypes.html">types</a> and
+<a href="../reference/extension-points/org_eclipse_ant_core_antProperties.html">properties</a>
+using extension points.&nbsp; The rest of this discussion assumes that you have a basic
 understanding of Ant.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
 </BODY></HTML>
