--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_developing.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_developing.htm
@@ -13,19 +13,28 @@ Developing tasks and types
 <BODY BGCOLOR="#ffffff">
 <h2>
 Developing Ant tasks and types within Eclipse</h2>
-<p>To successfully develop Ant tasks and types within Eclipse some guidelines must be followed:
+<p>The following guidelines should be followed when developing and debugging Ant 
+  tasks and types within Eclipse. These requirements stem from the fact that Ant 
+  tasks and types will be loaded by an Ant classloader, rather than a plug-in 
+  classloader, when an Ant is run in the same VM as Eclipse. To avoid having the 
+  Ant tasks and types loaded by a plug-in classloader, the tasks and types need 
+  to be stored in a location that is not visible to the plug-in classloader. Also 
+  see <a href="ant_contributing_task.htm">Contributing tasks and types</a>.
 <ul>
-<li>
-Plug-ins that plan to contribute Ant tasks or types need to have separate source folders for the Ant contribution source if the developer wishes to test/debug using the Run-time workbench support. </li>
-<li>These separate source folders must have separate output 
-locations.</li>
-<li>When testing/debugging the new Ant tasks or types, the the Run-time workspace launch configuration must be configured to not
-include these output locations in the classpath. This is achieved by not including the Ant output directories in the listing of the Classpath Entries (-dev) on the Arguments tab of the 
-Run-time Workbench launch configuration.</li>
-<li>Ensure to read <a href="ant_contributing_task.htm">Contributing tasks and types</a>
+  <li> Contributed Ant tasks or types should be defined in their own source folder 
+    within a plug-in (i.e. separate from the source folders containing regular 
+    plug-in classes)</li>
+  <li>Each source folder containing the Ant tasks and types should have its own 
+    output location that does not overlap with the output location of the regular 
+    plug-in classes.</li>
+  <li>When testing/debugging the new Ant tasks or types, the the Run-time workspace 
+    launch configuration must be configured to <b>exclude</b> the output locations 
+    containing Ant tasks and types. This is achieved by removing the Ant output 
+    directories in the listing of the <b>Classpath Entries (-dev)</b> field on 
+    the <b>Arguments</b> tab of a Run-time Workbench launch configuration.</li>
 </ul>
 
 
 
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." width="324" height="14"></a></p>
 </BODY></HTML>
